# ntes-client

./: .gitignore  README.md  pyproject.toml  requirements.txt
ntes/: __init__.py  client.py  crypto.py  exceptions.py  pnr.py  utils.py
tests/: test_client.py  test_crypto.py
