[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ntes-client"
version = "0.1.0"
description = "Unofficial Python client for NTES (Indian Railways)"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Vaibhav Chandra" }
]
keywords = ["ntes", "indian railways", "train", "railway api"]

dependencies = [
    "requests>=2.28.0",
    "pycryptodome>=3.20.0"
]

[project.urls]
Homepage = "https://github.com/x64vbhv/ntes-client"
Repository = "https://github.com/x64vbhv/ntes-client"

[tool.setuptools.packages.find]
where = ["."]
include = ["ntes*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]