[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ntes-client"
version = "0.1.3"
description = "Unofficial Python client for NTES (Indian Railways)"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"
license = "MIT" 

authors = [
    { name = "Vaibhav Chandra" }
]

keywords = ["ntes", "indian railways", "train", "railway api"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

dependencies = [
    "requests>=2.28.0",
    "pycryptodome>=3.20.0",
    "pillow>=10.0.0"
]

[project.urls]
Homepage = "https://github.com/x64vbhv/ntes-client"
Repository = "https://github.com/x64vbhv/ntes-client"

[tool.setuptools.packages.find]
where = ["."]
include = ["ntes*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
